--- a/index.html
+++ b/index.html
@@ -1,23 +1,4 @@
-<!DOCTYPE html>
+
 <html>
-
-<head>
-	<title> MAGIC </title>
-	
-	<link rel="stylesheet" href="./css/line_chat.css" type="text/css">  
-	<script type="text/javascript" src="./d3/d3.v2.js"></script>
-</head>  
-
-<body>
-	<p> DATA VISUALIZATION </p>
-	<svg id="visualisation" width="1000" height="500"></svg>        
-	
-	<script type="text/javascript" src="./js/line_char.js"></script>
-	<script type="text/javascript">
-		InitChart();
-	</script>
-
-</body>
-
-
+<a href="index.jsp"> index </a>
 </html>
